# propaganda-bot

./: .env_example  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
propaganda_bot/: asgi.py  settings.py  urls.py  wsgi.py
propaganda_bot/bot/: admin.py  apps.py  models.py  parser.py  serializers.py  services.py  tests.py  urls.py  views.py
propaganda_bot/bot/analyze_model/: analyze_news.py
propaganda_bot/bot/article_comparison/: articles_comparison.py
propaganda_bot/bot/migrations/: 0001_initial.py  0002_linkanalysis_article_authors_and_more.py  0003_linkanalysis_article_authors_community_notes_and_more.py
propaganda_bot/user/: models.py
